api utils + navbar + routing

--- a/client_web/src/index.html
+++ b/client_web/src/index.html
@@ -32,7 +32,7 @@
     />
     <title>Aquatherm</title>
 </head>
-<body>
+<body style='background:red'>
     <div id='root'>
         <!-- React App -->
     </div>
